--- a/charts/neo4j-backup/templates/deployment.yaml
+++ b/charts/neo4j-backup/templates/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
-  name: neo4j-backup
+  name: {{ .Release.Name }}-neo4j-backup
 spec:
   schedule: {{ default "0 3 * * *" .Values.backup.schedule }}
   jobTemplate:
