--- a/charts/neo4j-backup/templates/deployment.yaml
+++ b/charts/neo4j-backup/templates/deployment.yaml
@@ -11,7 +11,7 @@ spec:
         spec:
           initContainers:
             - name: neo4j-backup
-              image: neo4j:5.2-enterprise
+              image: {{ default "neo4j:5.9.0-enterprise" .Values.image }}
               command:
                 - "/bin/bash"
                 - "-c"
